--- a/develop/css/dev/layouts/_header.scss
+++ b/develop/css/dev/layouts/_header.scss
@@ -17,6 +17,7 @@
 			margin: 0;
 			padding: 0 14px 0 12px;
 			font-weight: 300;
+			z-index: 3;
 			img {
 				margin: -2px 4px 0 0;
 				display: inline-block;
@@ -29,6 +30,7 @@
 				&:hover,
 				&:focus {
 					color: $ruby;
+					outline: none;
 					text-decoration: none;
 
 				}
@@ -40,10 +42,67 @@
 		border-top: 1px solid #bababa;
 		border-bottom: 1px solid #bababa;
 		text-align: center;
+		&-btn {
+			@include position(absolute, 17px 15px null null);
+			background: none;
+			border: none;
+			width: 36px;
+			height: 23px;
+			padding: 0;
+			z-index: 12;
+			@include transition(all 0.2s ease-in-out);
+			* {
+				display: block;
+				width: 100%;
+				height: 3px;
+				background-color: $ruby;
+				@include transition(all 0.2s ease-in-out);
+				position: relative;
+			}
+			&:before,
+			&:after {
+				content: '';
+				position: absolute;
+				width: 100%;
+				height: 3px;
+				background-color: $ruby;
+				@include transition(all 0.2s ease-in-out);
+			}
+			&:before {
+				top: 0;
+				left: 0
+			}
+			&:after {
+				bottom: 0;
+				left: 0;
+			}
+			&.active {
+				&:before {
+					@include transform(rotate(45deg));
+					top: 10px;
+					background-color: #fff;
+				}
+				&:after {
+					background-color: #fff;
+					bottom: 10px;
+					@include transform(rotate(-45deg));
+				}
+				* {
+					background-color: #fff;
+					opacity: 0;
+					@include transform(translateX(-20px));
+				}
+			}
+		}
 		&-list {
 			list-style-type: none;
 			padding: 0;
 			margin: 0;
+			@include transition(all 0.2s ease-in-out);
+			&.active {
+				opacity: 1;
+				pointer-events: auto
+			}
 			&-item {
 				text-align: center;
 				margin: 0 10px;
@@ -52,6 +111,7 @@
 					color: $main-color;
 					text-transform: uppercase;
 					@include transition(all 0.2s ease-in-out);
+					&.active,
 					&:hover,
 					&:focus {
 						color: $ruby;
