--- a/develop/jade/includes/_footer.jade
+++ b/develop/jade/includes/_footer.jade
@@ -3,16 +3,16 @@ footer.footer
 		.row
 			.col-sm-2.col-xs-3.col-xxs-12
 				.text-center
-					img(src="/img/logo.png", alt="logo")
+					img(src="img/logo.png", alt="logo")
 					br
 					br
 					.header__social
 						a.header__social-link(href="#!" target="_blank")
-							img.header__social-link-img(src="/img/inst.png", alt="social-img")
+							img.header__social-link-img(src="img/inst.png", alt="social-img")
 						a.header__social-link(href="#!" target="_blank")
-							img.header__social-link-img(src="/img/fb.png", alt="social-img")
+							img.header__social-link-img(src="img/fb.png", alt="social-img")
 						a.header__social-link(href="#!" target="_blank")
-							img.header__social-link-img(src="/img/vk.png", alt="social-img")
+							img.header__social-link-img(src="img/vk.png", alt="social-img")
 			.col-sm-10.col-md-8.col-xs-9.col-xxs-12
 				.footer__menu.hidden-xs
 					ul.footer__menu-list
@@ -21,13 +21,13 @@ footer.footer
 								a.footer__menu-list-item-link(href="#!") #{item}
 				.footer__info
 					a.footer__info-holder.footer__info-holder--link(href="+74957218171") 
-						img(src="/img/f-phone.png", alt="")
+						img(src="img/f-phone.png", alt="")
 						|  #{phone}
 					a.footer__info-holder.footer__info-holder--link(href="mailto:#{email}") 
-						img(src="/img/mail.png", alt="")
+						img(src="img/mail.png", alt="")
 						|  #{email}
 					p.footer__info-holder 
-						img(src="/img/map.png", alt="")
+						img(src="img/map.png", alt="")
 						|  #{address}
 				.row
 					.col-sm-12.col-md-7.m-b-10
@@ -44,9 +44,9 @@ footer.footer
 						div Многоканальный телефон: 8 800 500-50-80
 						.visible-sm
 							a(href="#!" target="_blank")
-								img.footer__develop-logo(src="/img/develop.png", alt="")
+								img.footer__develop-logo(src="img/develop.png", alt="")
 			.col-sm-2.hidden-sm.hidden-xs
 				.footer__develop.text-center
 					a(href="#!" target="_blank")
-						img.footer__develop-img(src="/img/develop.png", alt="")
+						img.footer__develop-img(src="img/develop.png", alt="")
 					p.footer__develop-text Разработка сайта<br>«Два слона»
