--- a/develop/jade/includes/_header.jade
+++ b/develop/jade/includes/_header.jade
@@ -4,19 +4,19 @@ header.header
 			.col-sm-12.col-md-9
 				// логотип
 				a.header__logo(href="/")
-					img(src="/img/logo.png" alt="Site Logo")
+					img(src="img/logo.png" alt="Site Logo")
 				// / логотип
 				.header__center
 					// информация
 					.header__info
 						a.header__info-holder.header__info-holder--link(href="#enter-window" data-fancybox) 
-							img(src="/img/lock.png", alt="")
+							img(src="img/lock.png", alt="")
 							|  Вход в кабинет
 						a.header__info-holder.header__info-holder--link(href="mailto:#{email}") 
-							img(src="/img/mail.png", alt="")
+							img(src="img/mail.png", alt="")
 							|  #{email}
 						p.header__info-holder 
-							img(src="/img/map.png", alt="")
+							img(src="img/map.png", alt="")
 							|  #{address}
 					// / информация
 					// меню
@@ -40,11 +40,11 @@ header.header
 					.col-md-12.col-sm-7.hidden-xs
 						.header__social
 							a.header__social-link(href="#!" target="_blank")
-								img.header__social-link-img(src="/img/inst.png", alt="social-img")
+								img.header__social-link-img(src="img/inst.png", alt="social-img")
 							a.header__social-link(href="#!" target="_blank")
-								img.header__social-link-img(src="/img/fb.png", alt="social-img")
+								img.header__social-link-img(src="img/fb.png", alt="social-img")
 							a.header__social-link(href="#!" target="_blank")
-								img.header__social-link-img(src="/img/vk.png", alt="social-img")
+								img.header__social-link-img(src="img/vk.png", alt="social-img")
 		.row
 			.col-sm-12
 				// блок с кнопками
@@ -57,23 +57,23 @@ header.header
 								ul.header__buttons-dropdown-list
 									li.header__buttons-dropdown-list-item
 										a.header__buttons-dropdown-list-link(href="#!")
-											img.header__buttons-dropdown-list-img(src="/img/drop-img-1.png", alt="drop-img")
+											img.header__buttons-dropdown-list-img(src="img/drop-img-1.png", alt="drop-img")
 											p.header__buttons-dropdown-list-text Книги на нитке<br><span class="hidden-xs">от 300 руб.</span>
 									li.header__buttons-dropdown-list-item
 										a.header__buttons-dropdown-list-link(href="#!")
-											img.header__buttons-dropdown-list-img(src="/img/drop-img-2.png", alt="drop-img")
+											img.header__buttons-dropdown-list-img(src="img/drop-img-2.png", alt="drop-img")
 											p.header__buttons-dropdown-list-text Премиум альбомы<br><span class="hidden-xs">от 400 руб.</span>
 									li.header__buttons-dropdown-list-item
 										a.header__buttons-dropdown-list-link(href="#!")
-											img.header__buttons-dropdown-list-img(src="/img/drop-img-3.png", alt="drop-img")
+											img.header__buttons-dropdown-list-img(src="img/drop-img-3.png", alt="drop-img")
 											p.header__buttons-dropdown-list-text Книга бабочка<br><span class="hidden-xs">от 500 руб.</span>
 									li.header__buttons-dropdown-list-item
 										a.header__buttons-dropdown-list-link(href="#!")
-											img.header__buttons-dropdown-list-img(src="/img/drop-img-4.png", alt="drop-img")
+											img.header__buttons-dropdown-list-img(src="img/drop-img-4.png", alt="drop-img")
 											p.header__buttons-dropdown-list-text Журнал<br><span class="hidden-xs">от 999 руб.</span>
 									li.header__buttons-dropdown-list-item
 										a.header__buttons-dropdown-list-link(href="#!")
-											img.header__buttons-dropdown-list-img(src="/img/drop-img-5.png", alt="drop-img")
+											img.header__buttons-dropdown-list-img(src="img/drop-img-5.png", alt="drop-img")
 											p.header__buttons-dropdown-list-text Брошюра<br><span class="hidden-xs">от 1 300 руб.</span>
 							// / выпадающее
 						li.header__buttons-list-item
