--- a/develop/jade/includes/components/_main-slider.jade
+++ b/develop/jade/includes/components/_main-slider.jade
@@ -3,10 +3,10 @@
 	ul.main-slider__list
 		li.main-slider__list-item
 			.container
-				.main-slider__list-item-holder(style="background: url(../img/content/slide-1.png) right center no-repeat;")
+				.main-slider__list-item-holder(style="background: url(img/content/slide-1.png) right center no-repeat;")
 					p.main-slider__list-item-text Настоящие фотокниги быстро и просто!
 		li.main-slider__list-item
 			.container
-				.main-slider__list-item-holder(style="background: url(../img/content/slide-2.png) right center no-repeat;")
+				.main-slider__list-item-holder(style="background: url(img/content/slide-2.png) right center no-repeat;")
 					p.main-slider__list-item-text Запечатлите ваше чадо и показывайте всем родным и знакомым при каждом удобном случае
 // / слайдер на главной
