--- a/develop/jade/index.jade
+++ b/develop/jade/index.jade
@@ -48,32 +48,32 @@ block content
 						.col-md-7.col-sm-12
 							ul.format-block__tab-block-list
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
+									img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
 									p.format-block__tab-block-list-item-text 145 стр.
 									p.format-block__tab-block-list-item-price 6 440 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="/img/form-2.png", alt="")
+									img.format-block__tab-block-list-item-img(src="img/form-2.png", alt="")
 									p.format-block__tab-block-list-item-text 100 стр.
 									p.format-block__tab-block-list-item-price 3 600 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
+									img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
 									p.format-block__tab-block-list-item-text 145 стр.
 									p.format-block__tab-block-list-item-price 6 440 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
+									img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
 									p.format-block__tab-block-list-item-text 100 стр.
 									p.format-block__tab-block-list-item-price 3 600 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="/img/form-2.png", alt="")
+									img.format-block__tab-block-list-item-img(src="img/form-2.png", alt="")
 									p.format-block__tab-block-list-item-text 145 стр.
 									p.format-block__tab-block-list-item-price 6 440 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="/img/form-1.png", alt="")
+									img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
 									p.format-block__tab-block-list-item-text 100 стр.
 									p.format-block__tab-block-list-item-price 3 600 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
@@ -93,23 +93,23 @@ block content
 			ul.advantages-block__list
 				li.advantages-block__list-item
 					.advantages-block__list-item-img-holder
-						img.advantages-block__list-item-img(src="/img/advant-1.png", alt="advantages")
+						img.advantages-block__list-item-img(src="img/advant-1.png", alt="advantages")
 					p.advantages-block__list-item-text Оформление заказа<br>за 5 минут
 				li.advantages-block__list-item
 					.advantages-block__list-item-img-holder
-						img.advantages-block__list-item-img(src="/img/advant-2.png", alt="advantages")
+						img.advantages-block__list-item-img(src="img/advant-2.png", alt="advantages")
 					p.advantages-block__list-item-text Изготовление за<br>3 дня
 				li.advantages-block__list-item
 					.advantages-block__list-item-img-holder
-						img.advantages-block__list-item-img(src="/img/advant-3.png", alt="advantages")
+						img.advantages-block__list-item-img(src="img/advant-3.png", alt="advantages")
 					p.advantages-block__list-item-text Оплата при получении
 				li.advantages-block__list-item
 					.advantages-block__list-item-img-holder
-						img.advantages-block__list-item-img(src="/img/advant-4.png", alt="advantages")
+						img.advantages-block__list-item-img(src="img/advant-4.png", alt="advantages")
 					p.advantages-block__list-item-text Доставка в любой регион за 500 рублей
 				li.advantages-block__list-item
 					.advantages-block__list-item-img-holder
-						img.advantages-block__list-item-img(src="/img/advant-5.png", alt="advantages")
+						img.advantages-block__list-item-img(src="img/advant-5.png", alt="advantages")
 					p.advantages-block__list-item-text При заказе двух книг - доставка бесплатна!
 	// / наши приемущества
 	// тематика книги
@@ -121,7 +121,7 @@ block content
 					if (i==1 || i==2 || i==6 || i==7 || i==8)
 						a.book-subject__section-block.left-arrow(href="#!")
 							.book-subject__section-block-img-holder
-								img.book-subject__section-block-img(src="/img/content/photo.jpg", alt="photo")
+								img.book-subject__section-block-img(src="img/content/photo.jpg", alt="photo")
 							.book-subject__section-block-inner
 								p.book-subject__section-block-title Свадьба
 								p.book-subject__section-block-text от 3 000 руб.
@@ -131,7 +131,7 @@ block content
 								p.book-subject__section-block-title Какой то праздник
 								p.book-subject__section-block-text от 3 000 руб.
 							.book-subject__section-block-img-holder(href="#!")
-								img.book-subject__section-block-img(src="/img/content/photo.jpg", alt="photo")
+								img.book-subject__section-block-img(src="img/content/photo.jpg", alt="photo")
 				- }
 	// / тематика книги
 	// форма
@@ -147,11 +147,11 @@ block content
 								.form-block__inner-slider-wrap
 									ul.form-block__inner-slider
 										li.form-block__inner-slider-item
-											img.form-block__inner-slider-item-img(src="/img/content/book.png", alt="slider")
+											img.form-block__inner-slider-item-img(src="img/content/book.png", alt="slider")
 										li.form-block__inner-slider-item
-											img.form-block__inner-slider-item-img(src="/img/content/book.png", alt="slider")
+											img.form-block__inner-slider-item-img(src="img/content/book.png", alt="slider")
 										li.form-block__inner-slider-item
-											img.form-block__inner-slider-item-img(src="/img/content/book.png", alt="slider")
+											img.form-block__inner-slider-item-img(src="img/content/book.png", alt="slider")
 							.col-sm-6
 								.form-block__inner-description
 									p.form-block__inner-text Введите свой e-mail и получите электронную книгу с секретами фотографирования детей, чтобы получались няшные фото!
@@ -161,10 +161,10 @@ block content
 										form(action="#!")
 											.form-group
 												input.form-control(type="text" placeholder="Ваше имя")
-												img.form-label-img(src="/img/name.png", alt="")
+												img.form-label-img(src="img/name.png", alt="")
 											.form-group
 												input.form-control(type="text" placeholder="Ваше e-mail")
-												img.form-label-img(src="/img/form-mail.png", alt="")
+												img.form-label-img(src="img/form-mail.png", alt="")
 											.form-group
 												button.btn(type="submit") Получить книгу!					
 	// / форма
