--- a/develop/jade/includes/_layout.jade
+++ b/develop/jade/includes/_layout.jade
@@ -8,7 +8,7 @@ html(lang="ru")
 			include _header
 			// конец шапка
 			// контент
-			.content
+			.content(class="#{bgImg}")
 				block content
 			// конец контент
 		// футер
