--- a/develop/css/dev/_content.scss
+++ b/develop/css/dev/_content.scss
@@ -1,5 +1,4 @@
 $slider-height: 509px;
-
 .main-slider {
 	background: #f2f2f2;
 	margin: 10px 0 30px;
@@ -410,6 +409,131 @@ $slider-height: 509px;
 			.bx-wrapper .bx-pager {
 				bottom: -20px;
 			}
+		}
+	}
+}
+.breadcrumbs {
+	margin-bottom: 17px;
+	&__list {
+		list-style-type: none;
+		padding: 0;
+		margin: 0;
+		&-item {
+			display: inline-block;
+			position: relative;
+			font-weight: 300;
+			&:not(:last-child) {
+				padding-right: 15px;
+				&:before {
+					content: '>';
+					@include position(absolute, -1px 1px null null);
+
+				}
+			}
+			&-link {
+				letter-spacing: 1px;
+				color: #635e5e;
+				text-decoration: underline;
+				@include transition(all 0.2s ease-in-out);
+				&:focus,
+				&:hover {
+					color: $ruby;
+					text-decoration: none;
+				}
+				&.current {
+					color: $ruby;
+					text-decoration: none;
+				}
+			}
+		}
+	}
+}
+.content {
+	padding: 17px 0 0 0;
+	&.wall-bg {
+		background: url(../img/wall-bg.png) top center no-repeat;
+	}
+}
+.category-section {
+	&__menu {
+		text-align: center;
+		list-style-type: none;
+		padding: 0;
+		margin: 0 0 30px 0;
+		&-item {
+			padding: 3px 40px;
+			display: inline-block;
+			vertical-align: top;
+			&:not(:last-child) {
+				border-right: 1px solid #c2c2c2;
+			}
+			&-link {
+				color: #635e5e;
+				@include transition(all 0.2s ease-in-out);
+				&.current,
+				&:focus,
+				&:hover {
+					color: $ruby;
+					text-decoration: none;
+				}
+			}
+		}
+	}
+	&__description {
+		margin-bottom: 35px;
+		font-weight: 300;
+		letter-spacing: 1px;
+	    line-height: 21px;
+	}
+	&__block {
+		position: relative;
+		overflow: hidden;
+		max-width: 360px;
+		margin: 0 auto 30px auto;
+		&-link {
+			color: #4b4848;
+			&:hover,
+			&:focus {
+				color: #4b4848;
+				text-decoration: none;
+			}
+			&:hover {
+				.category-section__block-inner {
+					@include transform(translateY(0%));	
+				}
+			}
+		}
+		&-inner {
+			@include position(absolute, null 0 0 0);
+			@include transform(translateY(100%));
+			background-color: rgba(255,255,255, 0.9);
+			padding: 20px 26px;
+			@include transition(all 0.2s ease-in-out);
+			
+			&-title {
+				text-align: center;
+				font-family: $cav;
+				margin: 0 0 7px;
+				font-size: 18px;
+				text-align: center;
+			}
+			&-text {
+				color: #4b4848;
+				margin: 0;
+				font-weight: 300;
+			}
+		}
+	}
+	&__modal {
+		&-title {
+			margin: 0;
+			font-weight: bold;
+			font-size: 16px;
+			display: block;
+		}
+		&-text {
+			font-weight: 300;
+			display: block;
 		}
 	}
 }
