--- a/develop/css/dev/layouts/_header.scss
+++ b/develop/css/dev/layouts/_header.scss
@@ -217,8 +217,11 @@
 					font-weight: 300;
 					text-transform: uppercase;
 					@include transition(all 0.2s ease-in-out);
+					&:hover {
+						color: $ruby;
+						text-decoration: none;
+					}
 					&.active,
-					&:hover,
 					&:focus {
 						color: #fff;
 						text-decoration: none;
